--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+      apiKey: "AIzaSyD2FrwT3Z-ThNAnxytcjbQx4PuFpm3ibws",
+      authDomain: "ficha-rpg-j-m.firebaseapp.com",
+      projectId: "ficha-rpg-j-m",
+      storageBucket: "ficha-rpg-j-m.appspot.com",
+      messagingSenderId: "742101957607",
+      appId: "1:742101957607:web:e4f52e19432d0127c45b42",
+      measurementId: "G-ZNSFPSN3RX"
     };
-
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
